# realms-task

./: README.md
create-dao/: README.md  bun.lockb  package.json
create-dao/idl/: vote_boost_plugin.json  vote_boost_plugin.ts
create-dao/src/: constants.ts  index.ts  program-export.ts  util.ts
vote-boost-plugin/: Anchor.toml  package.json
vote-boost-plugin/programs/vote-boost-plugin/: Cargo.toml
vote-boost-plugin/programs/vote-boost-plugin/src/: error.rs  lib.rs
vote-boost-plugin/programs/vote-boost-plugin/src/gpl_shared/: compose.rs  generic_max_voter_weight.rs  mint.rs  mod.rs  token_owner_record.rs
vote-boost-plugin/programs/vote-boost-plugin/src/instructions/: create_registrar.rs  mod.rs  update_voter_weight_record.rs
vote-boost-plugin/programs/vote-boost-plugin/src/state/: mod.rs  registrar.rs  voter_weight_record.rs
vote-boost-plugin/tests/: vote-boost-plugin.ts
